alterações no site
alterações nos buttons dos integrantes, cor do plano de fundo, cor do menu

--- a/Guepard-Labs/index.html
+++ b/Guepard-Labs/index.html
@@ -44,7 +44,7 @@
 
 			<h1 id="titulo-all">Serviços</h1><br>
 			<div class="border-menu-index"></div>
-			<h3 id="titulo-all">Desenvolvimento de Websites</h3>
+			<br><h3 id="titulo-all">Desenvolvimento de Websites</h3>
 			<p>&emsp;Desenvolvimento de websites profissionais com as melhores e mais modernas ferramentas do mercado, um site pode refletir ao usuário uma boa ou má impressão. Então, o processo de criação de sites deve ser feito pelas empresas com profissionais capacitados em conservar a imagem positiva da sua empresa. <br>&emsp;Trabalhamos na construção de jogos que Dispõem de muitos recursos interativos  desde estratégias até simulações reais de muitas coisas como corridas (Need for Speed) ate mesmo de vida como o Second Life.</p>
 			<h3 id="titulo-all">Projetamos sites mobile de ótima qualidade</h3>
 			<p>&emsp;O Brasil é o quinto país em número de acessos móveis, com quase 200 milhões de linhas ativas. Além da portabilidade, este número reflete também que os celulares estão se tornando um centro de entretenimento digital então você que visa ter um site mobile de qualidade não pode perder essa oportunidade que estamos lhe dando.<br> &emsp;Estrategias com objetivo de potencializar o seu site não é qualquer estratégia que vai fazer o seu site conseguir o objetivo desejado, então você empresario tem que contar com uma equipe de profissionais capacitados.</p>
@@ -87,81 +87,83 @@
 
 	</section>
 
-	<section>
+	<section id="ancora-quem-somos">
 
-		<div class="container-quemsomos box-for-all" id="ancora-quem-somos">
-			<h1 id="titulo-all">Quem Somos</h1><br>
+		<div class="container-quemsomos box-for-all">
+			<br><h1 id="titulo-all">Quem Somos</h1><br>
+			<div class="border-menu-index"></div><br>
 			<ul class="box-quem-somos">
 				<li>
-					<div class="box-figure">
+					<div>
 						<img src="imagens/componentes/Gabriel_Silva.jpg" alt="Gabriel_Silva" class="tamanho-fotos-quem-somos">
-						<a class="ancora" id="vermais-gabriel-silva" href="javascript:void(0)">ver mais</a>
-						<div id="display">Programador</div>
+						<h4 id="titulo-all">Gabriel Silva <a class="ancora" id="vermais-gabriel-silva" href="javascript:void(0)">☰</a></h4>
+						<div id="display"><p>Programador e Design</p>
+						</div>
 					</div>
 				</li>
 
 				<li>
-					<figure class="box-figure">
+					<div>
 						<img src="imagens/componentes/Ismael_Santos.jpg" alt="Ismael_Santos" class="tamanho-fotos-quem-somos">
-						<a class="ancora" id="vermais-ismael-silva" href="javascript:void(0)">ver mais</a>
-						<figcaption id="display2">Fig1. - A view of the pulpit rock in Norway.</figcaption>
-					</figure>
+						<h4 id="titulo-all">Ismael Santos <a class="ancora" id="vermais-ismael-silva" href="javascript:void(0)">☰</a></h4>
+						<div id="display2">Programador e Testador</div>
+					</div>
 				</li>
 
 				<li>
-					<figure class="box-figure">
+					<div>
 						<img src="imagens/componentes/Gabriel_Lima.jpg" alt="Gabriel_Lima" class="tamanho-fotos-quem-somos">
-						<a class="ancora" id="vermais-gabriel-lima" href="javascript:void(0)">ver mais</a>
-						<figcaption id="display3">Fig1. - A view of the pulpit rock in Norway.</figcaption>
-					</figure>
+						<h4 id="titulo-all">Gabriel Lima <a class="ancora" id="vermais-gabriel-lima" href="javascript:void(0)">☰</a></h4>
+						<div id="display3">Programador</div>
+					</div>
 				</li>
 
 				<li>
-					<figure class="box-figure">
+					<div>
 						<img src="imagens/componentes/Gustavo_Dantas.jpg" alt="Gustavo_Dantas" class="tamanho-fotos-quem-somos">
-						<a class="ancora" id="vermais-gustavo-dantas" href="javascript:void(0)">ver mais</a>
-						<figcaption id="display4">Fig1. - A view of the pulpit rock in Norway.</figcaption>
-					</figure>
+						<h4 id="titulo-all">Gustavo Dantas <a class="ancora" id="vermais-gustavo-dantas" href="javascript:void(0)">☰</a></h4>
+						<div id="display4">Programador</div>
+					</div>
 				</li>
 
 				<li>
-					<figure class="box-figure">
+					<div>
 						<img src="imagens/componentes/Luiz_Souza.jpg" alt="Luiz_Souza" class="tamanho-fotos-quem-somos">
-						<a class="ancora" id="vermais-luiz-souza" href="javascript:void(0)">ver mais</a>
-						<figcaption id="display5">Fig1. - A view of the pulpit rock in Norway.</figcaption>
-					</figure>
+						<h4 id="titulo-all">Luiz Souza <a class="ancora" id="vermais-luiz-souza" href="javascript:void(0)">☰</a></h4>
+						<div id="display5">Testador</div>
+					</div>
 				</li>
 
 				<li>
-					<figure class="box-figure">
+					<div>
 						<img src="imagens/componentes/Marinaldo_Silva.jpg" alt="Marinaldo_Silva" class="tamanho-fotos-quem-somos">
-						<a class="ancora" id="vermais-marinaldo-silva" href="javascript:void(0)">ver mais</a>
-						<figcaption id="display6">Fig1. - A view of the pulpit rock in Norway.</figcaption>
-					</figure>
+						<h4 id="titulo-all">Marinaldo Silva <a class="ancora" id="vermais-marinaldo-silva" href="javascript:void(0)">☰</a></h4>
+						<div id="display6">Programador e Design</div>
+					</div>
 				</li>
 
 				<li>
-					<figure class="box-figure">
+					<div>
 						<img src="imagens/componentes/Nicolas_Lins.jpg" alt="Nicolas_Lins" class="tamanho-fotos-quem-somos">
-						<a class="ancora" id="vermais-nicolas-lins" href="javascript:void(0)">ver mais</a>
-						<figcaption id="display7">Fig1. - A view of the pulpit rock in Norway.</figcaption>
-					</figure>
+						<h4 id="titulo-all">Nicolas Lins <a class="ancora" id="vermais-nicolas-lins" href="javascript:void(0)">☰</a></h4>
+						<div id="display7">Testador</div>
+					</div>
 				</li>
 
 				<li>
-					<figure class="box-figure">
+					<div>
 						<img src="imagens/componentes/Suene_Silva.jpg" alt="Suene_Silva" class="tamanho-fotos-quem-somos">
-						<a class="ancora" id="vermais-suene-silva" href="javascript:void(0)">ver mais</a>
-						<figcaption id="display8">Fig1. - A view of the pulpit rock in Norway.</figcaption>
-					</figure>
+						<h4 id="titulo-all">Suene Silva <a class="ancora" id="vermais-suene-silva" href="javascript:void(0)">☰</a></h4>
+						<div id="display8">Programadora</div>
+					</div>
 				</li>
 
 				<li>
-					<figure class="box-figure">
+					<div>
 						<img src="imagens/componentes/Francisca_Matos.jpg" alt="Francisca_Matos" class="tamanho-fotos-quem-somos">
-						<a class="ancora" id="vermais-francisca-matos" href="javascript:void(0)">ver mais</a>
-						<figcaption id="display9">Fig1. - A view of the pulpit rock in Norway.</figcaption>
-					</figure>
+						<h4 id="titulo-all">Francisca Matos <a class="ancora" id="vermais-francisca-matos" href="javascript:void(0)">☰</a></h4>
+						<div id="display9">Testadora</div>
+					</div>
 				</li>
 
 			</ul>
@@ -172,16 +174,15 @@
 
 
 
-	<section class="container-onde-estamos" id="ancora-onde-estamos">
-
+	<section class="container-onde-estamos box-for-all" id="ancora-onde-estamos">
+		<br><h1 id="titulo-all">Onde Estamos<h1><br>
+		<div class="border-menu-index"></div><br>
 		<div class="map-guepard">
-			<div id="googleMap">
-
-			</div>
+			<div id="googleMap"></div>
 		</div>
 	</section>
 
-	
+
 	<footer class="container-footer text-center">
 		<div class="border-menu-index"></div>
 		<div>   
