Link do formulário adicionado

--- a/index.html
+++ b/index.html
@@ -157,6 +157,6 @@
 
         <h3>Elementos eliminados</h3>
         <p>E como não poderia deixar de ser, alguns elementos não deverão mais ser utilizados, como por exemplo os elementos center, u, tt, frame e noframes. Inevitavelmente, algumas das técnicas de acessibilidade que utilizamos hoje, deverão ser revistas bem como a busca por novas alternativas para esta nova versão.<br>Muito do que foi descrito acima, ainda está em estudo e aprendizado. Alguns testes já podem ser feitos em navegadores como o Chrome e Opera e, em algumas semanas, Firefox 4, e são essenciais para um entendimento mais direto das limitações e possibilidades que teremos. Sem descartar claro, que a troca de informações entre profissionais do desenvolvimento web será essencial, portanto comente, observe e sugira maneiras de utilização e saiba, este é só o começo do quanto o HTML 5 pretende revolucionar o que conhecemos por “construção de websites”.</p>
-
+	<a href="https://goo.gl/forms/StKTCuFTeQEkC95D2"><br />Responda nosso Questionário</a>
 </body>
 </html>
