--- a/Guepard-Labs/index.html
+++ b/Guepard-Labs/index.html
@@ -25,9 +25,13 @@
 			<li>
 				<a href="#ancora-quem-somos" class="padding-menuopcoes-index">Quem Somos</a> 
 			</li>
-
+			
 			<li> 
 				<a href="#ancora-onde-estamos" class="padding-menuopcoes-index">Onde Estamos</a>
+			</li>
+			
+			<li> 
+				<a href="tutorial/tutorial.html" target="_blank" class="padding-menuopcoes-index">Tutorial HTML 5</a>
 			</li>
 
 		</ul>
@@ -47,7 +51,7 @@
 			<br><h3 id="titulo-all">Desenvolvimento de Websites</h3>
 			<p>&emsp;Desenvolvimento de websites profissionais com as melhores e mais modernas ferramentas do mercado, um site pode refletir ao usuário uma boa ou má impressão. Então, o processo de criação de sites deve ser feito pelas empresas com profissionais capacitados em conservar a imagem positiva da sua empresa. <br>&emsp;Trabalhamos na construção de jogos que Dispõem de muitos recursos interativos  desde estratégias até simulações reais de muitas coisas como corridas (Need for Speed) ate mesmo de vida como o Second Life.</p>
 			<h3 id="titulo-all">Projetamos sites mobile de ótima qualidade</h3>
-			<p>&emsp;O Brasil é o quinto país em número de acessos móveis, com quase 200 milhões de linhas ativas. Além da portabilidade, este número reflete também que os celulares estão se tornando um centro de entretenimento digital então você que visa ter um site mobile de qualidade não pode perder essa oportunidade que estamos lhe dando.<br> &emsp;Estrategias com objetivo de potencializar o seu site não é qualquer estratégia que vai fazer o seu site conseguir o objetivo desejado, então você empresario tem que contar com uma equipe de profissionais capacitados.</p>
+			<p>&emsp;O Brasil é o quinto país em número de acessos móveis, com quase 200 milhões de linhas ativas. Além da portabilidade, este número reflete também que os celulares estão se tornando um centro de entretenimento digital então você que visa ter um site mobile de qualidade não pode perder essa oportunidade que estamos lhe dando.<br> &emsp;Estrategias com objetivo de potencializar o seu site não é qualquer estratégia que vai fazer o seu site conseguir o objetivo desejado, então você empresario tem que contar com uma equipe de profissionais capacitados.</p><br>
 
 		</div>
 
@@ -58,7 +62,7 @@
 
 		<div class="box-for-all text-center">
 
-			<h1 id="titulo-all">Dúvidas Frequentes.</h1><br>
+			<h1 id="titulo-all">Dúvidas Frequentes</h1><br>
 			<div class="class-imagem-duvida">
 				<img src="imagens/imagem-duvida.png">
 			</div><br>
@@ -114,7 +118,7 @@
 					<div>
 						<img src="imagens/componentes/Gabriel_Lima.jpg" alt="Gabriel_Lima" class="tamanho-fotos-quem-somos">
 						<h4 id="titulo-all">Gabriel Lima <a class="ancora" id="vermais-gabriel-lima" href="javascript:void(0)">☰</a></h4>
-						<div id="display3">Programador</div>
+						<div id="display3">Programador e Design</div>
 					</div>
 				</li>
 
@@ -173,7 +177,6 @@
 	</section>
 
 
-
 	<section class="container-onde-estamos box-for-all" id="ancora-onde-estamos">
 		<br><h1 id="titulo-all">Onde Estamos<h1><br>
 		<div class="border-menu-index"></div><br>
@@ -191,7 +194,7 @@
 				<img src="imagens/logo.png"> 
 			</div>
 			<div class="barra-transparente-baixo">&nbsp;</div>
-			<div class="GuepardLabs"><font>©2017 Guepard Labs. Todos os direitos reservados.</font></div>
+			<div><font>©2017 Guepard Labs. Todos os direitos reservados.</font></div>
 
 		</div>
 
